test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-08-31 21:24:55.237245

